--- a/public/index.html
+++ b/public/index.html
@@ -252,7 +252,7 @@
 
       <div class="mt-3 text-center" role="alert">
 
-        <img src="./assets/images/Step.png" class="img-fluid" alt="Responsive image">
+        <img src="./assets/images/step.png" class="img-fluid" alt="Responsive image">
 
 
       </div>
