btn chat payment

--- a/public/index.html
+++ b/public/index.html
@@ -199,7 +199,11 @@
                       <li>Acompañamiento en todo el proceso,</li>
                       <li> <b>Genera ingresos en el plan de referidos.</b></li>
                     </ul>
-                    <!-- <button type="button" class="w-100 btn btn-lg btn-success" ><a class="dropdown-item" href="formOpt1.html">Click para Iniciar</a></button> -->
+
+                    <button type="button" class="w-100 mb-2 btn btn-lg btn-success" >
+                      <a class="dropdown-item" href="https://wa.me/573167782676?text=Hola%20,%20requiero%20otro%20medio%20de%20pago." 
+                    target="_blank" rel="noopener noreferrer"><i class="bi bi-cash-coin"></i></i> Otro medio de pago</a>
+                    </button>
                     <div id="paypal-button-container"></div>
                   </div>
                 </div>
