--- a/public/formOpt1.html
+++ b/public/formOpt1.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9702DJYR21"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9702DJYR21');
+    </script>
 
     <title>AuroTax - Option 1</title>
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon3.ico" sizes="96x96">
@@ -590,9 +599,9 @@
 
                                                     <li class="mb-2"><a href="./assets/legal/terminos.pdf" 
                                                         target="_blank" rel="noopener noreferrer">Terminos y condiciones</a></li>
-                                                    <li class="mb-2"><a href="./assets/legal/POLÍTICA DE TRATAMIENTO DE DATOS PERSONALES AUROTAX.pdf" 
+                                                    <li class="mb-2"><a href="./assets/legal/politica_datos.pdf" 
                                                          target="_blank" rel="noopener noreferrer">Politica tratamiento de datos</a></li>
-                                                    <li class="mb-2"><a href="./assets/legal/AVISO Y AUTORIZACIÓN PARA EL TRATAMIENTO DE DATOS PERSONALES AUROTAX.pdf" 
+                                                    <li class="mb-2"><a href="./assets/legal/aviso_politica.pdf" 
                                                         target="_blank" rel="noopener noreferrer">Aviso para el tratamiento de datos personales</a></li>
 
 
