--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-DF98JTVC6B"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+    
+          gtag('config', 'G-DF98JTVC6B');
+        </script>
     <title>AuroTax</title>
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon3.ico" sizes="96x96">
-
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -384,9 +392,9 @@
               <ul class="list-unstyled text-small">
                 <li class=""><a href="./assets/legal/terminos.pdf" 
                   class="nav-link p-0 text-active" target="_blank" rel="noopener noreferrer">Terminos y condiciones del servicio</a></li>
-              <li class=""><a href="./assets/legal/POLÍTICA DE TRATAMIENTO DE DATOS PERSONALES AUROTAX.pdf" 
+              <li class=""><a href="./assets/legal/politica_datos.pdf" 
                 class="nav-link p-0 text-active" target="_blank" rel="noopener noreferrer">Politica tratamiento de datos</a></li>
-              <li class=""><a href="./assets/legal/AVISO Y AUTORIZACIÓN PARA EL TRATAMIENTO DE DATOS PERSONALES AUROTAX.pdf" 
+              <li class=""><a href="./assets/legal/aviso_politica.pdf" 
                 class="nav-link p-0 text-active" target="_blank" rel="noopener noreferrer">Aviso para el tratamiento de datos personales</a></li>
               </ul>
               </div>
