Changed HTML URLs to Localhost

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
                   Otras Opciones
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="https://152.70.118.197:8383/login">Admin</a></li>
+                  <li><a class="dropdown-item" href="http://localhost:8383/login">Admin</a></li>
                 </ul>
               </li>
               <li class="nav-item" hidden>
@@ -139,7 +139,7 @@
             <div class="navbar-nav ml-auto action-buttons">
                 
                 <div class="nav-item dropdown">
-                    <a href="https://152.70.118.197:8383/login" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn" aria-expanded="true">Log In</a>
+                    <a href="http://localhost:8383/login" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn" aria-expanded="true">Log In</a>
                     <div class="dropdown-menu action-form ">
                             <input type="button" class="btn btn-primary btn-block" value="Login">    
                     </div>
