Fixed HTML URLs typo

--- a/public/formOpt1.html
+++ b/public/formOpt1.html
@@ -68,7 +68,7 @@
                   Otras Opciones
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="aurotax.comlogin">Admin</a></li>    
+                  <li><a class="dropdown-item" href="aurotax.com/login">Admin</a></li>    
                 </ul>
               </li>
             </ul>
@@ -1164,7 +1164,7 @@
                                     <a href="index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                                       <svg class="bi" width="30" height="24"><use xlink:href="index.html"></use></svg>
                                     </a>
-                                    <span class="mb-3 mb-md-0 text-muted">© 2022 AuroTax.com</span>
+                                    <span class="mb-3 mb-md-0 text-muted">© 2022 aurotax.com/</span>
                                   </div>
                                 </footer>
                               </div>
