--- a/public/formOpt2.html
+++ b/public/formOpt2.html
@@ -89,7 +89,7 @@
                   Otras Opciones
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="aurotax.comlogin">Admin</a></li>
+                  <li><a class="dropdown-item" href="aurotax.com/login">Admin</a></li>
                 </ul>
               </li>
               <li class="nav-item" hidden>
@@ -153,7 +153,7 @@
             <div class="navbar-nav ml-auto action-buttons">
                 
                 <div class="nav-item dropdown">
-                    <a href="aurotax.comlogin" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn" aria-expanded="true">Log In</a>
+                    <a href="aurotax.com/login" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn" aria-expanded="true">Log In</a>
                     <div class="dropdown-menu action-form ">
                             <input type="button" class="btn btn-primary btn-block" value="Login">    
                     </div>
