--- a/public/formOpt1.html
+++ b/public/formOpt1.html
@@ -68,7 +68,7 @@
                   Otras Opciones
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="aurotax.com/login">Admin</a></li>    
+                  <li><a class="dropdown-item" href="/login">Admin</a></li>    
                 </ul>
               </li>
             </ul>
