--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
                   Otras Opciones
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="../server/views/login.ejs">Admin</a></li>
+                  <li><a class="dropdown-item" href="https://aurotax.com/admin">Admin</a></li>
                 </ul>
               </li>
               <li class="nav-item" hidden>
