--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
             <div class="navbar-nav ml-auto action-buttons">
                 
                 <div class="nav-item dropdown">
-                    <a href="/login" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn" aria-expanded="true">Log In</a>
+                    <a href="https://aurotax.com/admin" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn" aria-expanded="true">Log In</a>
                     <div class="dropdown-menu action-form ">
                             <input type="button" class="btn btn-primary btn-block" value="Login">    
                     </div>
