Fixed new GET routes, removed unused functions, formatted files

--- a/public/formOpt1.html
+++ b/public/formOpt1.html
@@ -36,7 +36,7 @@
     <script src="https://unpkg.com/downloadjs@1.4.7"></script>
 
         <!-- calculos -->
-    <script defer src="./index.js"></script>
+    <script defer src="./index.js" type="module"></script>
     <script defer src="./validators.js"></script>
     <script type="text/javascript" src="./finance.js"></script> 
 </head>
@@ -518,9 +518,12 @@
                                     </div>
 
 
-                                    <!-- grupo captcha -->
+                                    <!-- grupo captcha
 
-                                    <div class="g-recaptcha" data-sitekey="6Lfr8NwjAAAAAJ1EuLDt6NeS4WT-go_sHJkm2Pel" data-callback="verifyCaptcha"></div>
+                                    <div class="g-recaptcha" data-sitekey="6Lfr8NwjAAAAAJ1EuLDt6NeS4WT-go_sHJkm2Pel" data-callback="verifyCaptcha" ></div> -->
+
+                                    <!-- id local -->
+                                    <div class="g-recaptcha" data-sitekey="6LdhiN0jAAAAAJKF-YyZk7GxqprUJMOvz4iYjBj2" data-callback="verifyCaptcha"></div>
 
                                     <div id="g-recaptcha-error"></div>
 
