--- a/public/formOpt2.html
+++ b/public/formOpt2.html
@@ -36,7 +36,7 @@
     <script src="https://unpkg.com/downloadjs@1.4.7"></script>
 
         <!-- calculos -->
-    <script defer src="./index.js"></script>
+    <script defer src="./index.js" type="module"></script>
     <script defer src="./validators.js"></script>
     <script type="text/javascript" src="./finance2.js"></script> 
     <script type="text/javascript" src="./formOpt2.js"></script> 
