--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
     <!-- PayPal SDK -->
     <script src="https://www.paypal.com/sdk/js?client-id=AWOW3nDVhidqWCbM8-h5yQUKYdCkP-gaer55ICPff0iMnzFwJGNNje1TtbYDd4UYnM04u1gHXhreZXvK&currency=USD"></script>
-    <script src="./indexPayPal.js"></script>
+    <script src="./indexPayPal.js" type="module"></script>
 
 </head>
 <body>
