Enabled captcha, fixed DELETE method in admin, updated env username and password

--- a/public/formOpt1.html
+++ b/public/formOpt1.html
@@ -516,14 +516,14 @@
                                         </div>
                                         </div>
                                     </div>
+ 
 
+                                    <!-- grupo captcha -->
 
-                                    <!-- grupo captcha
+                                    <div class="g-recaptcha" data-sitekey="6Lfr8NwjAAAAAJ1EuLDt6NeS4WT-go_sHJkm2Pel" data-callback="verifyCaptcha" ></div> 
 
-                                    <div class="g-recaptcha" data-sitekey="6Lfr8NwjAAAAAJ1EuLDt6NeS4WT-go_sHJkm2Pel" data-callback="verifyCaptcha" ></div> -->
-
-                                    <!-- id local -->
-                                    <div class="g-recaptcha" data-sitekey="6LdhiN0jAAAAAJKF-YyZk7GxqprUJMOvz4iYjBj2" data-callback="verifyCaptcha"></div>
+                                    <!-- id local
+                                    <div class="g-recaptcha" data-sitekey="6LdhiN0jAAAAAJKF-YyZk7GxqprUJMOvz4iYjBj2" data-callback="verifyCaptcha"></div> -->
 
                                     <div id="g-recaptcha-error"></div>
 
