--- a/public/formOpt1.html
+++ b/public/formOpt1.html
@@ -36,9 +36,9 @@
     <script src="https://unpkg.com/downloadjs@1.4.7"></script>
 
         <!-- calculos -->
-    <script defer src="./index.js" type="module"></script>
+    <script defer src="./index.js"></script>
     <script defer src="./validators.js"></script>
-    <script type="text/javascript" src="./finance.js"></script> 
+    <script src="./finance.js"></script> 
 </head>
 
 <body onload="showGeneral()">
