Added console logs for testing

--- a/public/formOpt1.html
+++ b/public/formOpt1.html
@@ -225,7 +225,7 @@
                                             <option selected disabled value="">Seleccione un país</option>
                                             <option value="ARGENTINA">Argentina</option>
                                             <option value="BOLIVIA">Bolivia</option>
-                                            <option value="BRASIL">Brasil</option>
+                                            <option value="BRAZIL">Brasil</option>
                                             <option value="CHILE">Chile</option>
                                             <option value="COLOMBIA">Colombia</option>
                                             <option value="COSTA RICA">Costa Rica</option>
@@ -238,7 +238,7 @@
                                             <option value="PANAMA">Panamá</option>
                                             <option value="PARAGUAY">Paraguay</option>
                                             <option value="PERU">Perú</option>
-                                            <option value="REPUBLICA DOMINICANA">República Dominicana</option>
+                                            <option value="DOMINICAN REPUBLIC">República Dominicana</option>
                                             <option value="URUGUAY">Uruguay</option>
                                             <option value="VENEZUELA">Venezuela</option>
                                             <option value="GERMANY">Alemania</option>
@@ -520,10 +520,10 @@
 
                                     <!-- grupo captcha -->
 
-                                    <!-- <div class="g-recaptcha" data-sitekey="6Lfr8NwjAAAAAJ1EuLDt6NeS4WT-go_sHJkm2Pel" data-callback="verifyCaptcha" ></div>  -->
+                                    <div class="g-recaptcha" data-sitekey="6Lfr8NwjAAAAAJ1EuLDt6NeS4WT-go_sHJkm2Pel" data-callback="verifyCaptcha" ></div> 
 
                                     <!-- id local -->
-                                    <div class="g-recaptcha" data-sitekey="6LdhiN0jAAAAAJKF-YyZk7GxqprUJMOvz4iYjBj2" data-callback="verifyCaptcha"></div>
+                                    <!-- <div class="g-recaptcha" data-sitekey="6LdhiN0jAAAAAJKF-YyZk7GxqprUJMOvz4iYjBj2" data-callback="verifyCaptcha"></div> -->
 
                                     <div id="g-recaptcha-error"></div>
 
