--- a/public/formOpt2.html
+++ b/public/formOpt2.html
@@ -252,7 +252,7 @@
                                             <option selected disabled value="">Seleccione un país</option>
                                             <option value="ARGENTINA">Argentina</option>
                                             <option value="BOLIVIA">Bolivia</option>
-                                            <option value="BRASIL">Brasil</option>
+                                            <option value="BRAZIL">Brasil</option>
                                             <option value="CHILE">Chile</option>
                                             <option value="COLOMBIA">Colombia</option>
                                             <option value="COSTA RICA">Costa Rica</option>
@@ -265,7 +265,7 @@
                                             <option value="PANAMA">Panamá</option>
                                             <option value="PARAGUAY">Paraguay</option>
                                             <option value="PERU">Perú</option>
-                                            <option value="REPUBLICA DOMINICANA">República Dominicana</option>
+                                            <option value="DOMINICAN REPUBLIC">República Dominicana</option>
                                             <option value="URUGUAY">Uruguay</option>
                                             <option value="VENEZUELA">Venezuela</option>
                                             <option value="GERMANY">Alemania</option>
