--- a/public/pdf.html
+++ b/public/pdf.html
@@ -20,10 +20,10 @@
         <script src="https://unpkg.com/downloadjs@1.4.7"></script>
     
             <!-- calculos -->
-        <script defer src="./index.js" type="module"></script>
+        <script defer src="./index.js"></script>
         <script defer src="./pdf.js"></script>
         <script defer src="./validators.js"></script>
-        <script type="text/javascript" src="./finance.js"></script> 
+        <script defer src="./finance.js"></script> 
         <!-- <script type="text/javascript" src="./payer.js"></script>  -->
 
         <title>AuroTax - Payer</title>
@@ -611,7 +611,6 @@
 <div class="col-md-10 text-center">
     <button class="btn btn-primary" onclick="postInfo1()" type="button">Generar PDF's</button>
     <button type="button" class="btn btn-success" onclick="history.go(-1)">Regresar</button>
-    <button class="btn btn-primary" onclick="postInfo2()" type="button">Option2 PDF's</button>
     </div>
 </div>
 
