--- a/public/formOpt1.html
+++ b/public/formOpt1.html
@@ -147,7 +147,7 @@
             <div class="col-md-8 offset-md-2" id="general">
                 <P></P>
                 <P></P>
-                <div class="alert alert-success" role="alert">
+                <div class="alert alert-success mt-5" role="alert">
                     <H1>Bienvenid@</H1>
                     <h3>Al gestor de la forma 1040NR para Self-Employment (SE).</h3>
                     <h6>Iniciamos diligenciamiento del siguiente formulario (el cual está dividido en 3 secciones) para la presentación de la forma
