--- a/public/pdf.html
+++ b/public/pdf.html
@@ -376,7 +376,7 @@
        <div class="w-100"></div>
        <div class="col-6 col-sm-5">
          <span class="form-label-inline" style="font-weight: bold;"></span>(C=A-B)<strong> <label 
-            for="deductionSelfEmp">Deduction SE (92.35%)</label></strong><span></span>
+          for="deductionSelfEmp">Deduction SE (informativo)</label></strong><span></span>
        </div>
        <div class="col-6 col-sm-4">
          <span class="form-label-inline" style="font-weight: bold;"></span><strong>
