Updated countries list

--- a/public/pdf.html
+++ b/public/pdf.html
@@ -100,26 +100,35 @@
                 <div class="col-md-6" id="group_country">
                     <label for="name" class="form-label">Pais de nacionalidad</label>
                     <select class="form-select pdfValues" id="country" name="country">
-                        <option selected disabled value="">Seleccione un país</option>
-                        <option value="ARGENTINA">Argentina</option>
-                        <option value="BOLIVIA">Bolivia</option>
-                        <option value="BRASIL">Brasil</option>
-                        <option value="CHILE">Chile</option>
-                        <option value="COLOMBIA">Colombia</option>
-                        <option value="COSTA RICA">Costa Rica</option>
-                        <option value="DOMINICA">Dominica</option>
-                        <option value="ECUADOR">Ecuador</option>
-                        <option value="EL SALVADOR">El Salvador</option>
-                        <option value="GUATEMALA">Guatemala</option>
-                        <option value="HONDURAS">Honduras</option>
-                        <option value="MÉXICO">México</option>
-                        <option value="NICARAGUA">Nicaragua</option>
-                        <option value="PANAMÁ">Panamá</option>
-                        <option value="PARAGUAY">Paraguay</option>
-                        <option value="PERÚ">Perú</option>
-                        <option value="REPÚBLICA DOMINICANA">República Dominicana</option>
-                        <option value="URUGUAY">Uruguay</option>
-                        <option value="VENEZUELA">Venezuela</option>
+                      <option value="ARGENTINA">Argentina</option>
+                      <option value="BOLIVIA">Bolivia</option>
+                      <option value="BRAZIL">Brasil</option>
+                      <option value="CHILE">Chile</option>
+                      <option value="COLOMBIA">Colombia</option>
+                      <option value="COSTA RICA">Costa Rica</option>
+                      <option value="ECUADOR">Ecuador</option>
+                      <option value="EL SALVADOR">El Salvador</option>
+                      <option value="GUATEMALA">Guatemala</option>
+                      <option value="HONDURAS">Honduras</option>
+                      <option value="MÉXICO">México</option>
+                      <option value="NICARAGUA">Nicaragua</option>
+                      <option value="PANAMA">Panamá</option>
+                      <option value="PARAGUAY">Paraguay</option>
+                      <option value="PERU">Perú</option>
+                      <option value="DOMINICAN REPUBLIC">República Dominicana</option>
+                      <option value="URUGUAY">Uruguay</option>
+                      <option value="VENEZUELA">Venezuela</option>
+                      <option value="GERMANY">Alemania</option>
+                      <option value="UNITED KINGDOM">Reino Unido</option>
+                      <option value="FRANCE">Francia</option>
+                      <option value="ITALY">Italia</option>
+                      <option value="SPAIN">España</option>
+                      <option value="POLAND">Polonia</option>
+                      <option value="NETHERLANDS">Paises bajos</option>
+                      <option value="CZECH REPUBLIC (CZECHIA)">Republica checa</option>
+                      <option value="SWEDEN">Suiza</option>
+                      <option value="SOUTH AFRICA">Sudáfrica</option>
+                      <option value="CHINA">China</option>
                     </select>
                 </div>
 
